[project]
name = "photoweb"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Templated HTML galleries based on in-photo metadata"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "PIL",
    "pystache"
]

[project.optional-dependencies]
dev = ["mypy", "black", "pylint", "pytest", "pytest-md", "validate-pyproject", "build"]

[project.urls]
homepage = "https://github.com/mnot/photoweb"

[project.scripts]
photoweb = "photoweb.__main__:photoweb_cli"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "photoweb.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
SHORTNAME = ["py.typed"]

[tool.mypy]
follow_imports = "normal"
incremental = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true


[tool.pylint.basic]
function-rgx = "[a-z_][a-z0-9_]{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
attr-rgx = "[a-z_][a-z0-9_]{1,30}$"
argument-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,30}|(__.*__))$"
method-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-rgx = "[a-zA-Z0-9_]+$"

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116,W0613"

[tool.pylint.reports]
reports = false

[tool.pylint.variables]
dummy-variables-rgx = "_"

[tool.pylint.design]
max-args=10
max-locals=35
max-branches=25
max-statements=100
max-attributes=40
min-public-methods=1

[tool.pylint.similarities]
min-similarity-lines = 10
